# esp32-azure-iot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  component.mk  partitions.csv
components/azure-iot/: CMakeLists.txt
components/azure-iot/port/inc/: mbed_wait_api.h
components/azure-iot/port/src/: mbed_wait_api.c  socketio_berkeley.c
examples/iothub_client_sample_mqtt/: Makefile
examples/iothub_client_sample_mqtt/main/: azure_main.c  iothub_client_sample_mqtt.c
main/: CMakeLists.txt  Kconfig.projbuild  iothub_client_sample_mqtt.c  iothub_client_sample_mqtt.h  main.c
port/: CMakeLists.txt
port/src/: mbed_wait_api.c  platform_esp_idf.c  platform_openssl_compact.c  socketio_berkeley.c  tlsio_esp_tls.c
