idf_component_register(
    INCLUDE_DIRS 
        port 
        port/inc 
        azure-iot-sdk-c/certs 
        azure-iot-sdk-c/c-utility/deps/azure-macro-utils-c/inc        
        azure-iot-sdk-c/c-utility/inc
        azure-iot-sdk-c/c-utility/pal/inc 
        azure-iot-sdk-c/c-utility/pal/freertos 
        azure-iot-sdk-c/c-utility/pal/generic 
        azure-iot-sdk-c/c-utility/deps/umock-c/inc 
        azure-iot-sdk-c/iothub_client/inc 
        azure-iot-sdk-c/umqtt/inc 
        azure-iot-sdk-c/umqtt/inc/azure_umqtt_c 
        azure-iot-sdk-c/uamqp/inc 
        azure-iot-sdk-c/uamqp/inc/azure_uamqp_c 
        azure-iot-sdk-c/deps/uhttp/inc 
        azure-iot-sdk-c/deps/uhttp/inc/azure_uhttp_c 
        azure-iot-sdk-c/deps/parson 
        azure-iot-sdk-c/provisioning_client/inc 
        azure-iot-sdk-c/provisioning_client/adapters
    SRCS     
        port/src/platform_esp_idf.c
        port/src/mbed_wait_api.c
        port/src/socketio_berkeley.c
        azure-iot-sdk-c/certs/certs.c
        azure-iot-sdk-c/c-utility/pal/freertos/lock.c
        azure-iot-sdk-c/c-utility/pal/socket_async.c
        azure-iot-sdk-c/c-utility/pal/freertos/threadapi.c
        azure-iot-sdk-c/c-utility/pal/freertos/tickcounter.c
        azure-iot-sdk-c/c-utility/pal/lwip/sntp_lwip.c
        azure-iot-sdk-c/c-utility/adapters/agenttime.c
        azure-iot-sdk-c/c-utility/adapters/uniqueid_stub.c
        azure-iot-sdk-c/c-utility/adapters/httpapi_compact.c
        azure-iot-sdk-c/c-utility/adapters/tlsio_mbedtls.c
        azure-iot-sdk-c/c-utility/src/dns_resolver_sync.c
        azure-iot-sdk-c/c-utility/src/xlogging.c
        azure-iot-sdk-c/c-utility/src/singlylinkedlist.c
        azure-iot-sdk-c/c-utility/src/buffer.c
        azure-iot-sdk-c/c-utility/src/consolelogger.c
        azure-iot-sdk-c/c-utility/src/constbuffer.c
        azure-iot-sdk-c/c-utility/src/constmap.c
        azure-iot-sdk-c/c-utility/src/crt_abstractions.c
        azure-iot-sdk-c/c-utility/src/doublylinkedlist.c
        azure-iot-sdk-c/c-utility/src/gballoc.c
        azure-iot-sdk-c/c-utility/src/gb_stdio.c
        azure-iot-sdk-c/c-utility/src/gb_time.c
        azure-iot-sdk-c/c-utility/src/hmac.c
        azure-iot-sdk-c/c-utility/src/hmacsha256.c
        azure-iot-sdk-c/c-utility/src/httpapiex.c
        azure-iot-sdk-c/c-utility/src/httpapiexsas.c
        azure-iot-sdk-c/c-utility/src/httpheaders.c
        azure-iot-sdk-c/c-utility/src/map.c
        azure-iot-sdk-c/c-utility/src/optionhandler.c
        azure-iot-sdk-c/c-utility/src/sastoken.c
        azure-iot-sdk-c/c-utility/src/sha1.c
        azure-iot-sdk-c/c-utility/src/sha224.c
        azure-iot-sdk-c/c-utility/src/sha384-512.c
        azure-iot-sdk-c/c-utility/src/strings.c
        azure-iot-sdk-c/c-utility/src/string_tokenizer.c
        azure-iot-sdk-c/c-utility/src/urlencode.c
        azure-iot-sdk-c/c-utility/src/usha.c
        azure-iot-sdk-c/c-utility/src/vector.c
        azure-iot-sdk-c/c-utility/src/xio.c
        azure-iot-sdk-c/c-utility/src/azure_base64.c
        azure-iot-sdk-c/c-utility/src/wsio.c
        azure-iot-sdk-c/c-utility/src/uws_client.c
        azure-iot-sdk-c/c-utility/src/uws_frame_encoder.c
        azure-iot-sdk-c/c-utility/src/utf8_checker.c
        azure-iot-sdk-c/c-utility/src/gb_rand.c
        azure-iot-sdk-c/c-utility/src/http_proxy_io.c
        azure-iot-sdk-c/c-utility/src/azure_base32.c
        azure-iot-sdk-c/c-utility/src/uuid.c
        azure-iot-sdk-c/iothub_client/src/iothub_device_client_ll.c
        azure-iot-sdk-c/iothub_client/src/iothub_client_ll.c
        azure-iot-sdk-c/iothub_client/src/iothub_client_core_ll.c
        azure-iot-sdk-c/iothub_client/src/iothub_client_ll_uploadtoblob.c
        azure-iot-sdk-c/iothub_client/src/iothub_client_authorization.c
        azure-iot-sdk-c/iothub_client/src/iothub_client_retry_control.c
        azure-iot-sdk-c/iothub_client/src/iothub_client_diagnostic.c
        azure-iot-sdk-c/iothub_client/src/iothub_message.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport.c
        azure-iot-sdk-c/iothub_client/src/iothub_transport_ll_private.c
        azure-iot-sdk-c/iothub_client/src/version.c
        azure-iot-sdk-c/iothub_client/src/iothubtransporthttp.c
        azure-iot-sdk-c/iothub_client/src/iothubtransportmqtt.c
        azure-iot-sdk-c/iothub_client/src/iothubtransportmqtt_websockets.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport_mqtt_common.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport_amqp_common.c
        azure-iot-sdk-c/iothub_client/src/iothubtransportamqp_websockets.c
        azure-iot-sdk-c/iothub_client/src/iothubtransportamqp.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport_amqp_cbs_auth.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport_amqp_common.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport_amqp_connection.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport_amqp_device.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport_amqp_messenger.c
        azure-iot-sdk-c/iothub_client/src/iothubtransportamqp_methods.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport_amqp_telemetry_messenger.c
        azure-iot-sdk-c/iothub_client/src/iothubtransport_amqp_twin_messenger.c
        azure-iot-sdk-c/iothub_client/src/iothubtransportamqp_websockets.c
        azure-iot-sdk-c/iothub_client/src/uamqp_messaging.c
        azure-iot-sdk-c/iothub_client/src/message_queue.c
        azure-iot-sdk-c/iothub_client/src/blob.c
        azure-iot-sdk-c/umqtt/src/mqtt_client.c
        azure-iot-sdk-c/umqtt/src/mqtt_codec.c
        azure-iot-sdk-c/umqtt/src/mqtt_message.c
        azure-iot-sdk-c/uamqp/src/amqp_definitions.c
        azure-iot-sdk-c/uamqp/src/amqp_frame_codec.c
        azure-iot-sdk-c/uamqp/src/amqp_management.c
        azure-iot-sdk-c/uamqp/src/amqpvalue.c
        azure-iot-sdk-c/uamqp/src/amqpvalue_to_string.c
        azure-iot-sdk-c/uamqp/src/async_operation.c
        azure-iot-sdk-c/uamqp/src/cbs.c
        azure-iot-sdk-c/uamqp/src/connection.c
        azure-iot-sdk-c/uamqp/src/frame_codec.c
        azure-iot-sdk-c/uamqp/src/header_detect_io.c
        azure-iot-sdk-c/uamqp/src/link.c
        azure-iot-sdk-c/uamqp/src/message.c
        azure-iot-sdk-c/uamqp/src/message_receiver.c
        azure-iot-sdk-c/uamqp/src/message_sender.c
        azure-iot-sdk-c/uamqp/src/messaging.c
        azure-iot-sdk-c/uamqp/src/sasl_anonymous.c
        azure-iot-sdk-c/uamqp/src/saslclientio.c
        azure-iot-sdk-c/uamqp/src/sasl_frame_codec.c
        azure-iot-sdk-c/uamqp/src/sasl_mechanism.c
        azure-iot-sdk-c/uamqp/src/sasl_mssbcbs.c
        azure-iot-sdk-c/uamqp/src/sasl_plain.c
        azure-iot-sdk-c/uamqp/src/sasl_server_mechanism.c
        azure-iot-sdk-c/uamqp/src/session.c
        azure-iot-sdk-c/deps/uhttp/src/uhttp.c
        azure-iot-sdk-c/deps/parson/parson.c
        azure-iot-sdk-c/provisioning_client/src/prov_auth_client.c
        azure-iot-sdk-c/provisioning_client/src/prov_device_ll_client.c
        azure-iot-sdk-c/provisioning_client/src/prov_security_factory.c
        azure-iot-sdk-c/provisioning_client/src/iothub_security_factory.c
        azure-iot-sdk-c/provisioning_client/src/iothub_auth_client.c
        azure-iot-sdk-c/provisioning_client/src/prov_transport_mqtt_client.c
        azure-iot-sdk-c/provisioning_client/src/prov_transport_mqtt_ws_client.c
        azure-iot-sdk-c/provisioning_client/src/prov_transport_amqp_client.c
        azure-iot-sdk-c/provisioning_client/src/prov_transport_amqp_ws_client.c
        azure-iot-sdk-c/provisioning_client/src/prov_transport_http_client.c
        azure-iot-sdk-c/provisioning_client/src/prov_transport_mqtt_common.c
        azure-iot-sdk-c/provisioning_client/src/prov_transport_amqp_common.c
        azure-iot-sdk-c/provisioning_client/src/prov_sasl_tpm.c
        azure-iot-sdk-c/provisioning_client/adapters/hsm_client_data.c
        azure-iot-sdk-c/provisioning_client/adapters/hsm_client_key.c   
    REQUIRES
        mbedtls     
)

target_compile_options(
    ${COMPONENT_LIB} PRIVATE 
    -DUSE_LWIP_SOCKET_FOR_AZURE_IOT 
    -DHSM_TYPE_SYMM_KEY 
    -DUSE_PROV_MODULE 
    -Wno-unused-function 
    -Wno-missing-braces 
    -Wno-missing-field-initializers 
    -Wno-unknown-pragmas 
    -Wno-enum-compare 
    -Wno-unused-variable 
    -Wno-char-subscripts    
    -Wno-implicit-fallthrough

)
